2008-02-17  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/35209
	* config/abi/pre/gnu.ver: Export stdio_sync_filebuf symbols.
	* testsuite/ext/stdio_sync_filebuf/char/35209.cc: New.
	* testsuite/ext/stdio_sync_filebuf/wchar_t/35209.cc: Likewise.
	
2008-02-16  Benjamin Kosnik  <bkoz@redhat.com>

	* include/parallel/random_number.h: Use TR1's mersenne_twister.
	(random_number::genrand_bits()): Remove.
	(random_number::set_seed): Remove.
	
2008-02-15  Benjamin Kosnik  <bkoz@redhat.com>
	
	* include/parallel/types.h: Remove enum parallelism.
	
2008-02-15  Benjamin Kosnik  <bkoz@redhat.com>

	* include/parallel/types.h: Move enum parallelism here.  Use
	tr1/cstdint's int16_t, uint16_t, int32_t, uint32_t, int64_t,
	uint64_t. 
	* include/parallel/multiseq_selection.h: Adjust for cstdint.
	* include/parallel/compatibility.h: Same.
	* include/parallel/tags.h: Just compile-time tags.
	* include/parallel/base.h: Put namespace bits here.

	* src/Makefile.am (PARALLEL_FLAGS): Use it.
	* src/Makefile.in: Regenerate.

	* testsuite/25_algorithms/nth_element/1.cc: Add test variable.

2008-02-15  Hans-Peter Nilsson  <hp@axis.com>

	* testsuite/config/default.exp: Load gcc dejapatches.exp.

2008-02-14  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* testsuite/27_io/fpos/14320-1.cc: Check for "long long" and
	remove XFAIL.

2008-02-14  Benjamin Kosnik  <bkoz@redhat.com>

	* config/os/generic/error_constants.h (posix_errno): Guard
	not_supported use of ENOTSUP.
	* acinclude.m4 (GLIBCXX_CHECK_SYSTEM_ERROR): Add check for ENOTSUP
	for OpenBSD.
	* aclocal.m4: Regenerate.
	* configure: Rengerate.
	* config.h.in: Same.

2008-02-13  Benjamin Kosnik  <bkoz@redhat.com>

	* doc/doxygen/mainpage.html: Correct links.

2008-02-11  Benjamin Kosnik  <bkoz@redhat.com>

	* doc/html/*: Populate with regenerated files.

2008-02-11  Benjamin Kosnik  <bkoz@redhat.com>

	* doc/html/*: Remove all but contents of ext/pb_ds.
	* doc/html/index.html: New.
	* doc/html/README: New.
